--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,7 @@ language: generic
 services: docker
 
 script:
-  - docker build -t dongzhuoer/exseek docker
-  # build
-  #- docker build -t dongzhuoer/lulab:diff-exp .
-  # deploy
-  #- echo "$DOCKER_PASSWORD" | docker login -u dongzhuoer --password-stdin
-  #- docker push dongzhuoer/lulab:diff-exp
-  # test
-  #- bash -e test.sh
+  - echo 'hello travis'
 
 notifications:
   email: false
