--- a/snakemake/config.yaml
+++ b/snakemake/config.yaml
@@ -16,7 +16,7 @@ cross_validation_splits: 50
 
 count_method: domains_combined
 imputation_methods: ["scimpute_count"]
-normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm", "CPM_refer"]
+normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm", "CPM_refer", "null"]
 batch_removal_methods: ["null"]
 batch_indices: [1]
     
