--- a/snakemake/config.yaml
+++ b/snakemake/config.yaml
@@ -15,10 +15,10 @@ splitter: stratified_shuffle_split
 cross_validation_splits: 50
 
 count_method: domains_combined
-imputation_methods: ["scimpute_count"]
-normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm", "CPM_refer"]
-batch_removal_methods: ["null"]
-batch_indices: [1]
+imputation_methods: ["scimpute_count", "null"]
+normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm"]
+batch_removal_methods: ["null", "Combat", "RUV"]
+batch_indices: [1, 2, 3]
     
 # file paths
 annotation_dir: genome/hg38
@@ -26,6 +26,9 @@ genome_dir: genome/hg38
 output_dir: output/scirep
 temp_dir: tmp
 data_dir: data/scirep
+tools_dir: tools
+python2: /apps/anaconda2/bin/python
+python3: /apps/anaconda3/bin/python
 
 # general parameters
 threads_compress: 1
@@ -47,6 +50,4 @@ use_longest_transcript: true
 star_sjdboverhang: 100
 threads_mapping: 4
 paired_end: false
-tools_dir: ./tools
-python2: /apps/anaconda2/bin/python
-python3: /apps/anaconda3/bin/python
+small_rna: true
