--- a/snakemake/cluster.yaml
+++ b/snakemake/cluster.yaml
@@ -5,3 +5,7 @@ __default__:
   stdout: "logs/cluster/{rule}/{wildcards}.stdout"
   threads: "{threads}"
   resources: "span[hosts=1]"
+
+"map_genome_paired":
+  resources: "span[hosts=1] rusage[mem=30000]"
+  threads: 6
