Added bin_dir, adaptor_5p, trim_3p, trim_5p

--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -25,9 +25,7 @@ batch_indices: [1, 2, 3]
 # file paths
 annotation_dir: genome/hg38
 genome_dir: genome/hg38
-output_dir: output/scirep
 temp_dir: tmp
-data_dir: data/scirep
 tools_dir: tools
 python2: /apps/anaconda2/bin/python
 python3: /apps/anaconda3/bin/python
@@ -40,6 +38,11 @@ aligner: bowtie2
 adaptor: AGATCGGAAGAGCACACGTCTGAACTCCAGTCAC
 adaptor1: AGATCGGAAGAGCACACGTCTGAACTCCAGTCAC
 adaptor2: AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT
+adaptor1_5p: ""
+adaptor2_5p: ""
+adaptor_5p: ""
+trim_5p: 0
+trim_3p: 0
 min_read_length: 16
 max_read_length: 100
 min_base_quality: 30
