--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -1,60 +1,99 @@
+# RNA types for sequential mapping in small-RNA pipeline
 rna_types: [rRNA, lncRNA, miRNA, mRNA, piRNA, snoRNA, 
   snRNA, srpRNA, tRNA, tucpRNA, Y_RNA]
-threads: 1
+# Adjusted p-value threshold for defining domains
 call_domain_pvalue: "05"
+# Distribution to use to model read coverage in each bin
 distribution: ZeroTruncatedNegativeBinomial
+# Size of each bin to compute read coverage
 bin_size: 20
+# Define recurrent domain as domains called in fraction of samples above this value
 cov_threshold: 0.2
-normalize_methods: [cpm]
+# Method to scale features
 scale_method: robust
+# Classifier for feature selection
 classifiers: [random_forest]
+# Number of features to select
 n_selects: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50]
 resample_method: bootstrap
+# Feature selection methods
 select_methods: [robust]
-splitter: stratified_shuffle_split
-cross_validation_splits: 50
 
+splitter: stratified_shuffle_split
+# Number of random train-test splits for cross-validation
+cross_validation_splits: 50
+# Type of counts for feature selection
+#   domains_combined: combine miRNA/piRNA with long RNA domains
+#   transcript: transcript-level features
+#   featurecounts: gene-level features counted using featureCounts
 count_method: domains_combined
+# Define low expression value as read counts below this value
 filtercount: 10
+# Keep features with high expression in fraction of samples above this value
 filtersample: 0.2
+# Imputation methods to try (set to "null" to skip imputation)
 imputation_methods: ["scimpute_count", "viper_count", "null"]
+# Read depth normalization methods to try
 normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm"]
+# Batch effect removal methods to try (set "null" to skip batch effect removal)
 batch_removal_methods: ["null", "Combat", "RUV"]
+# Column index of batch effect in batch_info.txt to considier for Combat
 batch_indices: [1, 2, 3]
     
-# file paths
-annotation_dir: genome/hg38
+# Directory for sequences and annotations
 genome_dir: genome/hg38
+# Temporary directory (e.g. samtools sort, sort)
 temp_dir: tmp
+# Directory for third-party tools
 tools_dir: tools
-python2: /apps/anaconda2/bin/python
-python3: /apps/anaconda3/bin/python
 
-# general parameters
+# Number of threads for uncompression and compression
 threads_compress: 1
-
-# mapping parameters
+# Default number of threads to use
+threads: 1
+# alignment software to use (valie choices: bowtie, star)
 aligner: bowtie2
-adaptor: AGATCGGAAGAGCACACGTCTGAACTCCAGTCAC
-adaptor1: AGATCGGAAGAGCACACGTCTGAACTCCAGTCAC
-adaptor2: AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT
-adaptor1_5p: ""
-adaptor2_5p: ""
+# Remove 3'-end adaptor sequence from single-end reads
+adaptor: ""
+# Remove 5'-end adaptor sequence from single-end reads
 adaptor_5p: ""
+# Remove 3'-end adaptor sequence from the first read in a pair
+adaptor1: ""
+# Remove 3'-end adaptor sequence from the second read in a pair
+adaptor2: ""
+# Remove 5'-end adaptor sequence from the first read in a pair
+adaptor1_5p: ""
+# Remove 5'-end adaptor sequence from the second in a pair
+adaptor2_5p: ""
+# Exact number of bases to trim from 5'-end
 trim_5p: 0
+# Exact number of bases to trim from 3'-end
 trim_3p: 0
+# Discard reads of length below this value
 min_read_length: 16
 max_read_length: 100
 min_base_quality: 30
+# Trim bases with quality below this value from 5'-end
 min_base_quality_5p: 30
+# Trim bases with quality below this value from 3'-end
 min_base_quality_3p: 30
+# Quality encoding in FASTQ files
 quality_base: 33
+# Strandness (valid choices: forward, reverse, no)
 strandness: forward
+# Filter out reads with mapping quality below this value
 min_mapping_quality: 0
+# Only considier longest transcript for transcriptome mapping
 use_longest_transcript: true
+# Expected read length for mapping using STAR
 star_sjdboverhang: 100
+# Number of threads for mapping
 threads_mapping: 4
+# Input reads are paired-end
 paired_end: false
+# Use small RNA-seq pipeline (sequential mapping)
 small_rna: true
+# Remove UMI tags (leading nucleotides)
 umi_tags: false
+# Length of the UMI barcode
 umi_length: 0
