--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -38,7 +38,7 @@ normalization_methods: ["SCnorm", "TMM", "RLE", "CPM", "CPM_top", "CPM_rm"]
 # Batch effect removal methods to try (set "null" to skip batch effect removal)
 batch_removal_methods: ["null", "Combat", "RUV"]
 # Column index of batch effect in batch_info.txt to considier for Combat
-batch_indices: [1, 2, 3]
+batch_indices: []
     
 # Directory for sequences and annotations
 genome_dir: genome/hg38
