--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,20 @@
 docs_dir: docs
 site_name: exseek
 theme: readthedocs
+nav:
+  - Overview: index.md
+  - Get Started: get_started.md
+  - Installation: installation.md
+  - Genome and Annotations: genome_and_annotatins.md
+  - Small RNA-seq mapping: small_rna_pipeline.md
+  - Long RNA-seq mapping: long_rna_pipeline.md
+  - Matrix processing: matrix_processing.md
+  - Feature Selection: feature_selection.md
+  - Run on a cluster: cluster_configuration.md
+  - Configuration File Reference: configuration.md
+  - Utilities: utilities.md
+    - Quality Control: quality_control.md
+    - Adapter Removal: adapter_removal.md
+    - Generate BigWig Files: bigwig.md
+    - IGV Browser: igv_browser.md
+  - Frequently Asked Questions: FAQ.md
