--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -18,25 +18,43 @@ n_selects: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50]
 resample_method: bootstrap
 # Feature selection methods
 select_methods: [robust]
-
+# Enable zero fraction filter
 zero_fraction_filter: true
+# Parameters for zero fraction filter
 zero_fraction_filter_params:
   threshold: 0.8
+# Enable log transformation
 log_transform: true
+# Parameters for log transformation
 log_transform_params:
   base: 2
+# Enable RPM filter
 rpm_filter: false
+# Parameters for RPM filter
 rpm_filter_params:
   threshold: 10
+# Fold change filter
 fold_change_filter: true
+# Parameters for fold change filter
 fold_change_filter_params:
   direction: any
 fold_change_filter_direction: [any, up, down]
+# Feature scaling method
 scaler: robust
+# Parameters for feature scaling
 scaler_params:
   robust:
     with_centering: true
+# Enable differential expression filter
+diffexp_filter: false
+# Parameters for differential expression filter
+diffexp_filter_params:
+  method: deseq2
+  score_type: pi_value
+  fold_change_direction: any
+# Wrapper feature selection method
 selector: robust
+# Parameters for wrapper feature selection method
 selector_params:
   robust:
     cv:
@@ -45,7 +63,9 @@ selector_params:
       test_size: 0.2
   rfe:
     step: 0.2
+# Maximum number of features to select
 n_features_to_select: [10]
+# Classifier for prediction
 classifier: [logistic_regression, linear_svm, random_forest]
 # Parameters for classifiers
 classifier_params:
@@ -56,14 +76,17 @@ classifier_params:
     max_features: sqrt
   linear_svm:
     dual: True
+# Parameters for cross-validation
 cv_params:
   splitter: stratified_shuffle_split
   n_splits: 50
   test_size: 0.2
+# Method for computing sample-weight
 sample_weight: auto
 
-# Parameters for grid search for classifier parameters
+# Enable grid search for optimizing hyper-parameters in classifiers
 grid_search: true
+# Parameters for grid search for classifier parameters
 grid_search_params:
   param_grid:
     logistic_regression:
@@ -82,7 +105,7 @@ grid_search_params:
   cv:
     splitter: stratified_kfold
     n_splits: 5
-
+# Parameters for evalation of features
 evaluation_features:
   classifier: logistic_regression
   classifier_params:
@@ -209,7 +232,7 @@ umi_length: 0
 evaluate_features_preprocess_methods: []
 # Differential expression method
 # Available methods: deseq2, edger_glmlrt, edger_glmqlf, edger_exact, wilcox
-diffexp_method: deseq2
+diffexp_method: [deseq2, edger_glmlrt, edger_glmqlf, edger_exact, wilcox]
 # Count multi-mapping reads
 count_multimap_reads: true
 # Count overlapping features
