--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -105,6 +105,7 @@ grid_search_params:
   cv:
     splitter: stratified_kfold
     n_splits: 5
+  scoring: roc_auc
 # Parameters for evalation of features
 evaluation_features:
   classifier: logistic_regression
@@ -240,3 +241,15 @@ count_overlapping_features: true
 
 # Base URL for IGV web server
 igv_base_url: http://172.22.220.21:5000
+
+# Configuration for singularity
+singularity:
+  image: singularity/exseek.simg
+  wrapper_dir: singularity/wrappers
+
+# Configuration for cluster jobs
+cluster:
+  # Command template for submitting a job to cluster
+  submit_command: 'bsub -q {cluster.queue} -J {cluster.name} -e {cluster.stderr} -o {cluster.stdout} -R {cluster.resources} -n {cluster.threads}'
+  # Snakemake configuration file for cluster jobs
+  config_file: config/cluster.yaml
