--- a/snakemake/default_config.yaml
+++ b/snakemake/default_config.yaml
@@ -1,5 +1,5 @@
 # RNA types for sequential mapping in small-RNA pipeline
-rna_types: [rRNA, lncRNA, miRNA, mRNA, piRNA, snoRNA, 
+rna_types: [spikein, rRNA, lncRNA, miRNA, mRNA, piRNA, snoRNA, 
   snRNA, srpRNA, tRNA, tucpRNA, Y_RNA]
 # Adjusted p-value threshold for defining domains
 call_domain_pvalue: "05"
@@ -98,7 +98,7 @@ grid_search_params:
     linear_svm:
       C: [0.00001, 0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000, 10000, 100000]
     random_forest:
-      n_estimators: [10, 20, 30]
+      n_estimators: [25, 50, 75]
       max_depth: [3, 4, 5]
     decision_tree:
       max_depth: [2, 3, 4, 5, 6, 7, 8]
